--- a/Loan/Views/Loan/Edit.cshtml
+++ b/Loan/Views/Loan/Edit.cshtml
@@ -7,14 +7,9 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="CustomerId" />
             <div class="form-group">
                 <label asp-for="LoanType" class="control-label"></label>
-                <select id="LoanType" asp-for="LoanType"
-                        asp-items="@AMS.Utility.Helper.GetLoanTypeDropDown()"
-                        class="form-control">
-                    <option value="">Select Device</option>
-                </select>
+                <input asp-for="LoanType" class="form-control" />
                 <span asp-validation-for="LoanType" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -37,9 +32,13 @@
                 <input asp-for="TotalAmount" class="form-control" />
                 <span asp-validation-for="TotalAmount" class="text-danger"></span>
             </div>
-
             <div class="form-group">
-                <input type="submit" value="Save Changes" class="btn btn-success " /> <a class="btn btn-outline-secondary" asp-action="Index">Back to List</a>
+                <label asp-for="CustomerId" class="control-label"></label>
+                <select asp-for="CustomerId" class="form-control" asp-items="ViewBag.CustomerId"></select>
+                <span asp-validation-for="CustomerId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
